1999-01-25  Nat Friedman  <nat@nat.org>

	* gnome-dentry-edit.c (gnome_dentry_get_name_entry): New function
 	to provide access to the Name GtkEntry widget.
	(gnome_dentry_get_comment_entry): Likewise.
	(gnome_dentry_get_exec_entry): Likewise.
	(gnome_dentry_get_tryexec_entry): Likewise.
	(gnome_dentry_get_doc_entry): Likewise.
	(gnome_dentry_get_icon_entry): Likewise.
	* gnome-dentry-edit.h: Prototypes for the above.

1999-01-24  Tomas Ogren  <stric@ing.umu.se>

	* gnome-dock-band.c (gnome_dock_band_get_orientation):
	fixed initialization of band_child->real_offset to 0 to get rid
	of an UMR...

1999-01-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c (gnome_init_cb): If gdk_imlib_set_cache_info has
	been called before, then we do not reset it to the value set in
	disable_imlib_cache. 

1999-01-23  The Rasterman <raster@redhat.com>
	
	* gnome-init.c: disable setting of cache - this is the most evil
	thing I've ever seen. There is an imlib perefercnes (imlib_config)
	program to dojust this for every setting of imlib - and overriding
	it like this is not just bad coding but bad policy since now a
	users preferences dont count anymore.
					   
1999-01-23  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-client.c, gnome-client.h (gnome_client_set_priority): 
	API to set runlevel for gnome-session manager.

1999-01-21  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_new_flags): New function.
	Adds support for the text not being allocated on every icon
	insertion. 

	* gnome-icon-item.c (font_load): WEEE!  Major cpu resource hog
	found.  I was loading the same font over and over assuming Gdk had
	some sort of internal hash.  Well, it does not.

	Load it once only. 

	(gnome_icon_text_item_configure): Support for static text.  This
	means that the text does not need to be strdup()ed. 

Thu Jan 21 14:31:46 1999  George Lebl  <jirka@5z.com>

	* gnome-entry.c: fixed segfaults with gnome-entry, when an